{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 108,
  "lineage": "55233b0b-d547-a79b-3cd3-b01cf2c9d9a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "technical_test_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b773b5de92e3b59",
            "association_id": "eipassoc-03e4ceff02cf91cb3",
            "domain": "vpc",
            "id": "eipalloc-08b773b5de92e3b59",
            "network_border_group": "us-east-1",
            "network_interface": "eni-018abe61f0549f8b0",
            "private_dns": "ip-10-0-1-224.ec2.internal",
            "private_ip": "10.0.1.224",
            "public_dns": "ec2-34-234-8-96.compute-1.amazonaws.com",
            "public_ip": "34.234.8.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "technical-test-eip"
            },
            "tags_all": {
              "Name": "technical-test-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ariane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df8c184d5f6ae949",
            "arn": "arn:aws:ec2:us-east-1:133104976831:instance/i-080d77bc0872368ff",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080d77bc0872368ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hamdi-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c17e1943de0b06be",
            "private_dns": "ip-10-0-1-118.ec2.internal",
            "private_ip": "10.0.1.118",
            "public_dns": "ec2-54-198-176-160.compute-1.amazonaws.com",
            "public_ip": "54.198.176.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0080ff287752c3d0b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c059405047f6aeff"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ff09e9f903c4d68",
            "tags": {
              "Name": "technical-test-ariane"
            },
            "tags_all": {
              "Name": "technical-test-ariane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c059405047f6aeff"
            ]
          },
          "dependencies": [
            "aws_security_group.ariane_security_group",
            "aws_subnet.technical_test_public",
            "aws_vpc.technical_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "falcon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df8c184d5f6ae949",
            "arn": "arn:aws:ec2:us-east-1:133104976831:instance/i-04660ffd5d26c0c1e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04660ffd5d26c0c1e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hamdi-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e45840cc740e6d72",
            "private_dns": "ip-10-0-2-29.ec2.internal",
            "private_ip": "10.0.2.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01eb6d1432c30348c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-04e6da60ddb394726"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e851a5b7bfc51cb2",
            "tags": {
              "Name": "technical-test-falcon"
            },
            "tags_all": {
              "Name": "technical-test-falcon"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e6da60ddb394726"
            ]
          },
          "dependencies": [
            "aws_security_group.ariane_security_group",
            "aws_security_group.falcon_security_group",
            "aws_subnet.technical_test_private",
            "aws_vpc.technical_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df8c184d5f6ae949",
            "arn": "arn:aws:ec2:us-east-1:133104976831:instance/i-02a0825b935d0deb0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a0825b935d0deb0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hamdi-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cc56656bbbbda247",
            "private_dns": "ip-10-0-2-68.ec2.internal",
            "private_ip": "10.0.2.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05771e1d54c1ff1a4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d86b6612c6465482"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e851a5b7bfc51cb2",
            "tags": {
              "Name": "technical-test-redis"
            },
            "tags_all": {
              "Name": "technical-test-redis"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d86b6612c6465482"
            ]
          },
          "dependencies": [
            "aws_security_group.ariane_security_group",
            "aws_security_group.falcon_security_group",
            "aws_security_group.redis_security_group",
            "aws_subnet.technical_test_private",
            "aws_vpc.technical_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "technical_test_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133104976831:internet-gateway/igw-0f02c2464b0bff3ad",
            "id": "igw-0f02c2464b0bff3ad",
            "owner_id": "133104976831",
            "tags": {
              "Name": "technical-test-internet-gateway"
            },
            "tags_all": {
              "Name": "technical-test-internet-gateway"
            },
            "vpc_id": "vpc-0e0df974c206bf0ad"
          },
          "dependencies": [
            "aws_vpc.technical_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "technical_test_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b773b5de92e3b59",
            "connectivity_type": "public",
            "id": "nat-01f4ea605d29fd390",
            "network_interface_id": "eni-018abe61f0549f8b0",
            "private_ip": "10.0.1.224",
            "public_ip": "34.234.8.96",
            "subnet_id": "subnet-02ff09e9f903c4d68",
            "tags": {
              "Name": "technical-test-nat-gateway"
            },
            "tags_all": {
              "Name": "technical-test-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.technical_test_eip",
            "aws_subnet.technical_test_public",
            "aws_vpc.technical_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "technical_test_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133104976831:route-table/rtb-0f9a7d86eab27fcab",
            "id": "rtb-0f9a7d86eab27fcab",
            "owner_id": "133104976831",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01f4ea605d29fd390",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "technical-test-private-routing-table"
            },
            "tags_all": {
              "Name": "technical-test-private-routing-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0df974c206bf0ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.technical_test_eip",
            "aws_nat_gateway.technical_test_nat_gateway",
            "aws_subnet.technical_test_public",
            "aws_vpc.technical_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "technical_test_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133104976831:route-table/rtb-0f036c5981d4fa8b3",
            "id": "rtb-0f036c5981d4fa8b3",
            "owner_id": "133104976831",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f02c2464b0bff3ad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "technical-test-routing-table"
            },
            "tags_all": {
              "Name": "technical-test-routing-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0df974c206bf0ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.technical_test_internet_gateway",
            "aws_vpc.technical_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a57ceeb5337232c",
            "route_table_id": "rtb-0f9a7d86eab27fcab",
            "subnet_id": "subnet-0e851a5b7bfc51cb2"
          },
          "dependencies": [
            "aws_eip.technical_test_eip",
            "aws_nat_gateway.technical_test_nat_gateway",
            "aws_route_table.technical_test_private_route_table",
            "aws_subnet.technical_test_private",
            "aws_subnet.technical_test_public",
            "aws_vpc.technical_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7a518a851a5870e",
            "route_table_id": "rtb-0f036c5981d4fa8b3",
            "subnet_id": "subnet-02ff09e9f903c4d68"
          },
          "dependencies": [
            "aws_internet_gateway.technical_test_internet_gateway",
            "aws_route_table.technical_test_route_table",
            "aws_subnet.technical_test_public",
            "aws_vpc.technical_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ariane_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133104976831:security-group/sg-0c059405047f6aeff",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c059405047f6aeff",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "Allow SSH traffic from the instance it self",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "196.179.246.130/32"
                ],
                "description": "Allow SSH traffic from my network",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "82.11.22.33/32",
                  "81.44.55.87/32",
                  "87.12.33.88/32"
                ],
                "description": "Allow HTTPS traffic from specific sources",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20250117171439266000000001",
            "name_prefix": "terraform-",
            "owner_id": "133104976831",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "technical-test-ariane-security-group"
            },
            "tags_all": {
              "Name": "technical-test-ariane-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0df974c206bf0ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.technical_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "falcon_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133104976831:security-group/sg-04e6da60ddb394726",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e6da60ddb394726",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic from Ariane security group",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c059405047f6aeff"
                ],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH traffic from Ariane security group",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c059405047f6aeff"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250117171442388400000002",
            "name_prefix": "terraform-",
            "owner_id": "133104976831",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "technical-test-falcon-security-group"
            },
            "tags_all": {
              "Name": "technical-test-falcon-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0df974c206bf0ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ariane_security_group",
            "aws_vpc.technical_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133104976831:security-group/sg-0d86b6612c6465482",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d86b6612c6465482",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic from Falcon security group",
                "from_port": 6399,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e6da60ddb394726"
                ],
                "self": false,
                "to_port": 6399
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH traffic from Ariane security group",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c059405047f6aeff"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250117171445133900000003",
            "name_prefix": "terraform-",
            "owner_id": "133104976831",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "technical-test-redis-security-group"
            },
            "tags_all": {
              "Name": "technical-test-redis-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0df974c206bf0ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ariane_security_group",
            "aws_security_group.falcon_security_group",
            "aws_vpc.technical_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "technical_test_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133104976831:subnet/subnet-0e851a5b7bfc51cb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e851a5b7bfc51cb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133104976831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "technical-test-private"
            },
            "tags_all": {
              "Name": "technical-test-private"
            },
            "vpc_id": "vpc-0e0df974c206bf0ad"
          },
          "dependencies": [
            "aws_vpc.technical_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "technical_test_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133104976831:subnet/subnet-02ff09e9f903c4d68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ff09e9f903c4d68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133104976831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "technical-test-public"
            },
            "tags_all": {
              "Name": "technical-test-public"
            },
            "vpc_id": "vpc-0e0df974c206bf0ad"
          },
          "dependencies": [
            "aws_vpc.technical_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "technical_test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133104976831:vpc/vpc-0e0df974c206bf0ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08b8742bb8a2c8787",
            "default_route_table_id": "rtb-0bc1375e4c95dc350",
            "default_security_group_id": "sg-083c822ebccaa78e2",
            "dhcp_options_id": "dopt-2a452f52",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e0df974c206bf0ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bc1375e4c95dc350",
            "owner_id": "133104976831",
            "tags": {
              "Name": "technical-test-vpc"
            },
            "tags_all": {
              "Name": "technical-test-vpc"
            }
          }
        }
      ]
    }
  ]
}